--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 10;
-    color: #FFD700; /* Gold */
+    color: #d3a84c; /* Gold */
     font-size: 2.5rem;
     font-family: 'Montserrat';
     font-weight: lighter;
@@ -149,3 +149,4 @@ body.fade-in {
 
 </body>
 </html>
+
