--- a/index.html
+++ b/index.html
@@ -101,6 +101,71 @@ body {
 body.fade-in {
   opacity: 1;
 }
+.vision{
+  width: 100%;
+  height: 40vh;
+  text-overflow: hidden;
+  overflow: hidden;
+  display: flex;
+  /* border: 1px gold solid; */
+}
+t{
+    font-size: 3rem;
+    color: gold; /* Gold */
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    font-weight: Bold;
+    margin-bottom: 1rem;
+
+}
+p{
+    /* border: 1px solid gold; */
+    width: 80%;
+
+  font-size: 1.5rem;
+  color: #d3a84c; /* Gold */
+  font-family: 'Montserrat';
+  text-align: left;
+  margin-bottom: 1rem;
+}
+.vision-image
+{
+  width: 70vh;
+  height: 40vh;
+  align-items: left;
+  margin-left: auto;
+  margin-right: 7vh;
+  /* border: 1px solid #d3a84c; */
+  
+}
+.who-we-are{
+    width: 100%;
+    height: 70vh;
+    display: flex;
+    /* border: 1px solid gold; */
+}
+.who-we-are-title{
+    font-size: 3rem;
+    color: gold; /* Gold */
+    font-family: 'Montserrat', sans-serif;
+    padding-left: 110vh;
+    text-align: right;
+    font-weight: Bold;
+    margin-bottom: 1rem;
+}
+.who-we-are-description{
+    font-size: 1.5rem;
+    color: #d3a84c; /* Gold */
+    font-family: 'Montserrat';
+    text-align: right;
+    padding-left: 30vh;
+    margin-bottom: 1rem;
+    height: 40vh;
+    
+}
+.img-container{
+      height: 47vh;
+}
     </style>
 </head>
 <body>
@@ -131,6 +196,39 @@ body.fade-in {
     <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
     <div class="swiper-pagination"></div>
+
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="vision">
+  <div class="container">
+  <t class="vision-1">OUR VISION</t>
+  <p class="vision-p1">At Él Señor Realty, we dare to dream beyond bricks and mortar.
+We envision a world where homes are not just shelters but sanctuaries — affordable, elegant, and inspired by the timeless grace of Greek and Indian architecture.
+Our mission is to craft living spaces that blend culture with comfort, tradition with innovation, turning every house into a throne where families reign.
+Because true success is building legacies that stand the test of time — and that’s the empire we’re destined to create.</p>
+</div>
+  <img src="eye-icon-front-side-with-white-background-removebg-preview.png" alt="Vision Image" class="vision-image">
+
+</div>
+<br>
+<br>
+<div class="who-we-are">
+    <div class="img-container">
+        <img src="EL-removebg-preview.png" alt="" srcset="" class="img-container">
+    </div>
+    <div class="container">
+    <t class="who-we-are-title">WHO WE ARE?</t>
+    <p class="who-we-are-description">At Él Señor Realty, we’re more than a company — we’re visionaries shaping homes that blend heritage with innovation. We create sustainable, elegant sanctuaries where families grow, thrive, and build lasting memories. Our mission is to empower you to find not just a house, but a future — because here, we don’t just sell properties, we build legacies.</p>
+</div>
+</div>
+
 </div>
 
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
@@ -149,4 +247,3 @@ body.fade-in {
 
 </body>
 </html>
-
