--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="EL-removebg-preview.png">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Él Señor Realty</title>
 
@@ -304,3 +305,4 @@
   </script>
 </body>
 </html>
+
